Bug 447800 - Brush 'Flow' value is incorrectly reflected between Brush HUD and Quick Settings Docker
Summary: Brush 'Flow' value is incorrectly reflected between Brush HUD and Quick Setti...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 5.0.0
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-01 21:59 UTC by pentool
Modified: 2024-08-22 19:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
On-Screen HUD showing incorrect Flow value (209.83 KB, image/png)
2022-01-01 21:59 UTC, pentool
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pentool 2022-01-01 21:59:45 UTC
Created attachment 145030 [details]
On-Screen HUD showing incorrect Flow value

SUMMARY
***
Selecting a Flow value in the Quick Settings Docker will not be reflected in the On-Canvas Brush Editor HUD. Only zero (0) or one (1.00) value will be shown in the HUD.
***


STEPS TO REPRODUCE
1. Bring up the Quick Settings Docker and switch to the Flow tab.
2. Right click on the canvas to bring up the On-Canvas Brush Editor HUD.
3. Show the brush parameter popup (or whatever it is called within the HUD) by clicking on the right pointing arrow. This popup will show and allow you to set various brush values, eg opacity, size, flow, etc for the selected brush.
4. Edit this popup so that the Brush Flow parameter will be shown, if not visible.
5. Make sure both the Quick Settings Docker and the On-Canvas Brush Editor HUD is visible at the same time and in the Quick Settings Docker click on a Flow percentage. The selected Flow value will not be reflected in the On-Canvas Brush Editor HUD Flow field. If you select 0.1 - 40% Flow value in the Quick Settings Docker, the Flow value in the HUD will be zero. If you select 50 - 100% Flow value in the Quick Settings Docker, the flow value in the HUD will be 1.00.

OBSERVED RESULT
If you select 0.1 - 40% Flow value in the Quick Settings Docker, the Flow value in the HUD will be zero. If you select 50 - 100% Flow value in the Quick Settings Docker, the flow value in the HUD will be 1.00.


EXPECTED RESULT
The Quick Settings Docker displays percentages, but the On-Canvas Brush Editor HUD displays float values. Possibly some conversion issue, but the On-Canvas Brush Editor HUD should display the correct float value for the Flow that corresponds to the percentage value selected in the Quick Settings Docker.

In the attached screenshot, 40% Flow value is selected in the Quick Settings Docker, yet 0.00 Flow value is showing in the On-Canvas Brush Editor HUD.

SOFTWARE/OS VERSIONS

macOS: Mojave 10.14.6

ADDITIONAL INFORMATION

SESSION: 26 Dec 2021 19:03:43 +0100. Executing /Applications/krita.app/Contents/MacOS/krita

Krita Version: 5.0.0, Qt version compiled: 5.12.12, loaded: 5.12.12. Process ID: 1154
-- -- -- -- -- -- -- --
26 Dec 2021 19:03:43 +0100: Style: fusion. Available styles: macintosh, Windows, Fusion
26 Dec 2021 19:07:24 +0100: Created image "Unnamed", 2560 * 1440 pixels, 72 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 2
27 Dec 2021 04:34:31 +0100: CLOSING SESSION
Comment 1 Halla Rempt 2022-03-08 11:22:16 UTC
Weirdly enough, the flow slider in the toolbar _is_ correctly updated.
Comment 2 Freya Lupen 2024-08-22 19:33:19 UTC
Git commit f7fa3831aa0164218f0715e4863654fe7ca098bc by Freya Lupen.
Committed on 22/08/2024 at 19:32.
Pushed by freyalupen into branch 'master'.

Fix On-Canvas Brush Editor's decimal sliders

The externally changed values were being converted to integers
by mistake.
Related: bug 457744

M  +1    -1    plugins/dockers/brushhud/kis_uniform_paintop_property_widget.cpp

https://invent.kde.org/graphics/krita/-/commit/f7fa3831aa0164218f0715e4863654fe7ca098bc
Comment 3 Freya Lupen 2024-08-22 19:45:54 UTC
Git commit 50295544108c06fd19a0b303b0dc1e28dd434173 by Freya Lupen.
Committed on 22/08/2024 at 19:45.
Pushed by freyalupen into branch 'krita/5.2'.

Fix On-Canvas Brush Editor's decimal sliders

The externally changed values were being converted to integers
by mistake.
Related: bug 457744

M  +1    -1    libs/ui/brushhud/kis_uniform_paintop_property_widget.cpp

https://invent.kde.org/graphics/krita/-/commit/50295544108c06fd19a0b303b0dc1e28dd434173