Fix On-Canvas Brush Editor's decimal sliders

The externally changed values were being converted to integers
by mistake.

BUG:447800
BUG:457744